# sysforge

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  docs.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  config.rs  history.rs  input.rs  logging.rs  main.rs  state.rs  terminal.rs  theme.rs  ui.rs
crates/app/src/render/: components.rs  cpu.rs  disk.rs  docker.rs  git.rs  memory.rs  mod.rs  network.rs  overlay.rs  processes.rs  systemd.rs
crates/common/: Cargo.toml
crates/common/src/: availability.rs  collector.rs  domain_state.rs  lib.rs
crates/disk/: Cargo.toml
crates/disk/src/: collector.rs  config.rs  lib.rs
crates/docker/: Cargo.toml
crates/docker/src/: collector.rs  config.rs  lib.rs  logs.rs
crates/git/: Cargo.toml
crates/git/src/: collector.rs  config.rs  lib.rs
crates/network/: Cargo.toml
crates/network/src/: collector.rs  config.rs  lib.rs
crates/system/: Cargo.toml
crates/system/src/: cpu.rs  lib.rs  memory.rs  process.rs
crates/systemd/: Cargo.toml
crates/systemd/src/: collector.rs  config.rs  lib.rs
