[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/picoliW/sysforge"
authors = ["Luiz Picoli"]

[workspace.dependencies]
sysforge-common = { path = "crates/common" }
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
sysforge-system = { path = "crates/system" }
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"