[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/picoliW/sysforge"
authors = ["Luiz Picoli"]

[workspace.dependencies]
sysforge-common = { path = "crates/common" }
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = { version = "0.29", features = ["serde"] }
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
sysforge-system = { path = "crates/system" }
thiserror = "2"
directories = "6"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
bollard = "0.18"
sysforge-docker = { path = "crates/docker" }
sysforge-git = { path = "crates/git" }
sysforge-network = { path = "crates/network" }
sysforge-disk = { path = "crates/disk" }
rustix = { version = "0.38", features = ["fs"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"