[package]
name = "sysforge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A developer operations dashboard for Linux and WSL"

[[bin]]
name = "sysforge"
path = "src/main.rs"

[dependencies]
sysforge-common.workspace = true
anyhow.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
tokio.workspace = true
sysforge-system.workspace = true
directories.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
sysforge-docker.workspace = true
sysforge-git.workspace = true
sysforge-network.workspace = true

[lints]
workspace = true