[package]
name = "sysforge-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Git repository collector for SysForge"

[dependencies]
serde.workspace = true
sysforge-common.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true