[package]
name = "sysforge-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Network interface collector for SysForge"

[dependencies]
serde.workspace = true
sysforge-common.workspace = true
tokio.workspace = true

[lints]
workspace = true