[package]
name = "sysforge-system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Operating system collectors (memory, CPU, ...) for SysForge"

[dependencies]
sysforge-common.workspace = true
tokio.workspace = true

[lints]
workspace = true