[package]
name = "sysforge-systemd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "systemd service collector for SysForge"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sysforge-common.workspace = true
tokio.workspace = true

[lints]
workspace = true
